tests/golden/type_errors/compound_assignment_typed_non_number_value.cd
let n: number = 1;
n += "x";
